--- a/src/main/webapp/WEB-INF/jsp/common/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/navbar.jspf
@@ -2,7 +2,7 @@
     <a class="navbar-brand m-1" href="https://www.linkedin.com/in/gabriellesualibio/">gabrielle</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/todo/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/todo/all-todos">Todos</a></li>
         </ul>
     </div>
